Fix jump to top on click

--- a/src/stylesheets/modules/global/_header.scss
+++ b/src/stylesheets/modules/global/_header.scss
@@ -33,7 +33,6 @@
   html.is-open-menu,
   html.is-open-menu body {
     overflow: hidden;
-    height: 100%;
   }
   html.is-open-menu {
     body {
