--- a/src/stylesheets/modules/global/_menu.scss
+++ b/src/stylesheets/modules/global/_menu.scss
@@ -171,6 +171,10 @@
   }
 }
 
+html.is-open-menu {
+  height: initial;
+}
+
 .hamburger-menu {
   @extend .navbar-toggler;
   padding: 0;
